--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "git-electron",
+  "name": "git-electron-dashboard",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
